<resources>
    <string name="app_name">App Elecciones</string>
    <string name="TITULO">ELECCIONES 2023 - ALCALDE ITUANGO</string>
    <string name="Ingrese_nom">Nombre:</string>
    <string name="Ingrese_cc">Identificacion:</string>
    <string name="Ingrese_edad">Edad:</string>
    <string name="Linea"></string>
    <string name="Linea2"></string>
    <string name="Linea22"></string>
    <string name="Linea3"></string>
    <string name="Boton1">INGRESAR</string>
    <string name="Boton2">ADMINISTRADOR</string>
    <string name="TITULO2">PROCESO DE VOTACION</string>
    <string name="Imagen_Description">Descripcion</string>
    <string name="TITULO3">INICIA SESION COMO ADMINISTRADOR</string>
    <string name="USUARIO">USUARIO:</string>
    <string name="CONTRASEÑA">CONTRASEÑA:</string>
    <string name="lINEA1"></string>
    <string name="lINEA2"></string>
    <string name="IniciarS">INICIAR SESION</string>
    <string name="TITULO4">COMO VAN LAS VOTACIONES PARA LA ALCALDIA</string>
    <string name="linea41"></string>
    <string name="linea42"></string>
    <string name="linea43"></string>
    <string name="linea44"></string>
    <string name="SALIRALMENU">CERRAR SESION</string>
</resources>