<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@mipmap/definitiva2"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Pantalla2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:gravity="center"
        android:text="@string/TITULO2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold|normal">

    </TextView>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="104sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Ingrese_cc"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"></TextView>

        <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80sp"
            android:layout_weight="2"
            android:id="@+id/Linea2"
            android:text="@string/Linea22"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textAlignment="center">

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:srcCompat="@mipmap/votar">

        </ImageView>

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:srcCompat="@mipmap/votarr">

        </ImageView>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:srcCompat="@mipmap/votarrr">

        </ImageView>

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:srcCompat="@mipmap/votablanco">

        </ImageView>

    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="273dp"
            android:layout_height="114dp"
            app:srcCompat="@mipmap/ituango2" />

    </LinearLayout>

</LinearLayout>